--- a/.env.exemple
+++ b/.env.exemple
@@ -11,5 +11,5 @@ EMAIL_HOST=yur_email_host
 DB_NAME=your_database_name
 DB_USER=your_database_user
 DB_PASSWORD=your_database_password
-DB_HOST=your_database_host
-DB_PORT=your_database_port
+DB_HOST=localhost
+DB_PORT=5432
